tests/invalid/loops/do_no_semicolon.rs
/*
compilationExitCode: 2
*/

main(): i32 {
    do
        3;
    while (4)
}